Fix for emergency alert being tucked under the menu bar on mobile

--- a/src/partials/layouts/_emergency-alerts.scss
+++ b/src/partials/layouts/_emergency-alerts.scss
@@ -2,8 +2,13 @@
 .emergency-full {
     background-color: $tcc-burgundy;
     display: block;
+    margin-top: 59px; //Magic number for the size of the fixed top menu bar in mobile
     padding: 40px;
     width: 100%;
+
+    @include bp(medium) {
+        margin-top: 0;
+    }
 }
 
 .emergency-top {
